# ftdc-grafana-viewer

./: .gitignore  .note  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: compression.rs  ftdc_decoder.rs  lib.rs  main.rs  metrics_array_decoder.rs  prometheus.rs  reader.rs  varint.rs  victoria_metrics.rs
tests/: README.md  ftdc_chunk_detector_test.rs  ftdc_decoder_test.rs  ftdc_extract_metric_test.rs  ftdc_format_test.rs  ftdc_metric_parser_test.rs  integration_test.rs  reference_doc_summary.md  show_reference_doc.rs  victoria_metrics_tests.rs
tests/fixtures/: ftdc-metrics-example  metric-2025-03-12_15-58-06.0_+00-00-00.bson  metric-2025-03-12_15-58-06.0_+00-00-00.json  reference_doc.txt  test_parse_chunk.out.txt
