[package]
name = "ftdc-importer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MongoDB FTDC to Victoria Metrics importer"

[dependencies]
libflate = "2.0"
byteorder = "1.5"
bson = "2.9.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
bytes = "1.5"
futures = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
structopt = "0.3"
varinteger = "1.0"
tempfile = "3.10.0"
zstd = "0.13.0"
flate2 = "1.0.28"
prometheus-reqwest-remote-write = "0.3.0"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
wiremock = "0.5"
